tests/snapshots/resolves_and_types_shadow.snap
---
source: tests/m02.rs
expression: result
---
Ok {
    resolution: Resolution {
        uses: {
            Span {
                start: 39,
                end: 40,
                file: FileId(
                    1,
                ),
            }: BindingId(
                1,
            ),
            Span {
                start: 76,
                end: 77,
                file: FileId(
                    1,
                ),
            }: BindingId(
                3,
            ),
        },
        bindings: {
            BindingId(
                0,
            ): BindingDecl {
                name: "main",
                kind: Fn,
                decl_span: Span {
                    start: 0,
                    end: 80,
                    file: FileId(
                        1,
                    ),
                },
                name_span: Span {
                    start: 0,
                    end: 80,
                    file: FileId(
                        1,
                    ),
                },
            },
            BindingId(
                1,
            ): BindingDecl {
                name: "x",
                kind: Let {
                    mutable: false,
                },
                decl_span: Span {
                    start: 16,
                    end: 26,
                    file: FileId(
                        1,
                    ),
                },
                name_span: Span {
                    start: 16,
                    end: 26,
                    file: FileId(
                        1,
                    ),
                },
            },
            BindingId(
                2,
            ): BindingDecl {
                name: "y",
                kind: Let {
                    mutable: false,
                },
                decl_span: Span {
                    start: 31,
                    end: 45,
                    file: FileId(
                        1,
                    ),
                },
                name_span: Span {
                    start: 31,
                    end: 45,
                    file: FileId(
                        1,
                    ),
                },
            },
            BindingId(
                3,
            ): BindingDecl {
                name: "x",
                kind: Let {
                    mutable: false,
                },
                decl_span: Span {
                    start: 50,
                    end: 63,
                    file: FileId(
                        1,
                    ),
                },
                name_span: Span {
                    start: 50,
                    end: 63,
                    file: FileId(
                        1,
                    ),
                },
            },
            BindingId(
                4,
            ): BindingDecl {
                name: "z",
                kind: Let {
                    mutable: false,
                },
                decl_span: Span {
                    start: 68,
                    end: 78,
                    file: FileId(
                        1,
                    ),
                },
                name_span: Span {
                    start: 68,
                    end: 78,
                    file: FileId(
                        1,
                    ),
                },
            },
        },
    },
    types: TypeMap {
        expr_types: {
            Span {
                start: 24,
                end: 25,
                file: FileId(
                    1,
                ),
            }: I32,
            Span {
                start: 39,
                end: 40,
                file: FileId(
                    1,
                ),
            }: I32,
            Span {
                start: 43,
                end: 44,
                file: FileId(
                    1,
                ),
            }: I32,
            Span {
                start: 39,
                end: 44,
                file: FileId(
                    1,
                ),
            }: I32,
            Span {
                start: 58,
                end: 62,
                file: FileId(
                    1,
                ),
            }: Bool,
            Span {
                start: 76,
                end: 77,
                file: FileId(
                    1,
                ),
            }: Bool,
        },
        binding_types: {
            BindingId(
                0,
            ): Fn(
                FnSig {
                    params: [],
                    ret: Unit,
                },
            ),
            BindingId(
                1,
            ): Var(
                I32,
            ),
            BindingId(
                2,
            ): Var(
                I32,
            ),
            BindingId(
                3,
            ): Var(
                Bool,
            ),
            BindingId(
                4,
            ): Var(
                Bool,
            ),
        },
    },
}
